--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "dev": "./run-in-docker.sh"
   },
+  "prettier": "@harperdb/code-guidelines/prettier",
   "author": "HarperDB, Inc.",
   "dependencies": {
     "prom-client": "^15.1.1"
+  },
+  "devDependencies": {
+    "@harperdb/code-guidelines": "0.0.2"
   }
 }
