--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@harperdb/prometheus-exporter",
   "version": "1.0.27",
-  "description": "HarperDB Prometheus Exporter",
+  "description": "Harper Prometheus Exporter",
   "type": "module",
   "scripts": {
     "dev": "./run-in-docker.sh"
